[gd_scene load_steps=5 format=3 uid="uid://b8dcbg7c7urd2"]

[ext_resource type="PackedScene" uid="uid://4kuxresjq8q1" path="res://scenes/menu/main_menu/main_menu.tscn" id="1_8u350"]
[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_26u74"]
[ext_resource type="PackedScene" uid="uid://bclavqqpokmq2" path="res://scenes/menu/background.tscn" id="1_a75pu"]
[ext_resource type="PackedScene" uid="uid://bgb02ep8cfa4q" path="res://scenes/menu/option_menu/option_menu.tscn" id="3_di70s"]

[node name="Menu" type="Control" node_paths=PackedStringArray("menus")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_26u74")
current_menu_index = null
menus = [NodePath("MainMenu"), NodePath("OptionMenu")]

[node name="Background" parent="." instance=ExtResource("1_a75pu")]
layout_mode = 1

[node name="MainMenu" parent="." instance=ExtResource("1_8u350")]
visible = false
layout_mode = 1

[node name="OptionMenu" parent="." instance=ExtResource("3_di70s")]
visible = false
layout_mode = 1

[connection signal="resized" from="." to="." method="_on_resized"]
